--- a/.github/workflows/sync_to_hugging_face_hub.yml
+++ b/.github/workflows/sync_to_hugging_face_hub.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://shameer1234:$HF_TOKEN@huggingface.co/spaces/shameer1234/Image_Similarity_using_VGGFACE_senet50 main
+        run: git push --force https://shameer1234:$HF_TOKEN@huggingface.co/spaces/shameer1234/Image_Similarity_using_VGGFACE_senet50 main
